@@ -26,6 +26,9 @@ release.
 
 - Fixed behavior of ezmlm-manage -Q flag to match man page.
 
+- Fixed ezmlm-import failing to flush output to the last message.
+  Thanks to Tullio Andreatta.
+
 ezmlm-idx-7.1.1, 2010-11-18
 ===========================
 
